--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 								<!-- about text -->
 								<p>I am Akash Gupta, completing my senior year in B.Tech. Information Technology from MMMUT Gorakhpur, nourishing myself for applying classical strategies to modern-day projects.</p>
 								<div class="mt-3">
-									<a href="https://drive.google.com/file/d/14BgNuXhlbIv3Oj2zaWhBV9IlGy972S-9/view?usp=sharing" target="_blank" class="btn btn-default">Download CV</a>
+									<a href="https://drive.google.com/file/d/1Oxo52IBiOZzNs-syUIjxmVBjKL2lOdqn/view?usp=sharing" target="_blank" class="btn btn-default">Download CV</a>
 								</div>
 								<div class="spacer d-md-none d-lg-none" data-height="30"></div>
 							</div>
@@ -500,7 +500,7 @@
 						<p>Online portal where user can authenticate and register
 							complaints which will be acknowledged by admins with the help
 							of admin panel.</p>
-						<a href="http://protected-falls-77000.herokuapp.com/" class="btn btn-default mx-1" target="_blank">Link</a>
+						<a href="https://mmmut-grievance.herokuapp.com/" class="btn btn-default mx-1" target="_blank">Link</a>
 						<a href="https://github.com/akashwebdesigns/Grievance-Portal" class="btn btn-default mx-1" target="_blank">Code</a>
 					</div>
 
@@ -520,10 +520,10 @@
 			
 				<div class="col-md-4 col-sm-6 grid-item creative design">
 					<div class="portfolio-item rounded shadow-dark p-3">
-						<h2>CryptoWorld</h2>
-					   <p>Platform where you can view all the details about the cryptocurrencies and stock market data with realtime prices and variation.</p>
-					   <a href="#" class="btn btn-default mx-1" target="_blank">Link</a>
-					   <a href="#" class="btn btn-default mx-1" target="_blank">Code</a>
+						<h2>CryptoPunk</h2>
+					   <p>Platform where you can view all the details about the cryptocurrencies data with realtime prices and variation.</p>
+					   <a href="https://cryptopunk99.netlify.app/" class="btn btn-default mx-1" target="_blank">Link</a>
+					   <a href="https://github.com/akashwebdesigns/crypto-punk" class="btn btn-default mx-1" target="_blank">Code</a>
 				   </div>
 
 				</div> 
